made some edits on the fcai scheduler